compilers/ID/cool/regression/BASE_cgtest/old_cool/bugaug22b.cl.stderr
./BASE_cgtest/bugaug22b.cl:2: Redefinition of basic class Object.
Compilation halted due to static semantic errors.
