compilers/ID/cool/regression/BASE_cgtest/old_cool/bugaug22b.cl
Class Object is 
end;

Class A is
	a : Int;
end;
